testcases/semantic/valid/func3.rs
fn hello(code: &i32) -> i32 {
    return 2;
}

fn main() {
    let a: i32 = 2;
    hello(&a);
    exit(0);
}
