testcases/semantic/invalid/func_ref.rs
fn hello(code: &i32) {}

fn main() {
    let a: i32 = 2;
    hello(a);
    exit(0);
}
